--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.6",
     "tslib": "^2.3.0",
